# StreamTech_Bus485

./: Bus485.code-workspace  CMakeLists.txt  Kconfig  Kconfig.bus485  bus485.overlay  bus485_tree.txt  prj.conf
driver/: CMakeLists.txt  Kconfig  app.overlay  bus485.overlay  prj.conf
driver/dts/bindings/: custom,bus485.yaml  vendor-prefixes.txt
driver/dts/bindings/bus485/: custom,bus485.yaml
driver/dts/bindings/rs485/: custom,bus485.yaml
driver/inc/: bus485.h
driver/src/: =-manager-=(на будущее).c  bus485.c
driver/zephyr/: module.yml
dts/bindings/: bus485_extention.yaml
dts/bindings/rs485/: custom,bus485.yaml
inc/: bus485.h
include/: bus485.h  manager.h
samples/: CMakeLists.txt
samples/basic/: CMakeLists.txt
src/: bus485.c  manager.c
test_app/: CMakeLists.txt  prj.conf
test_app/src/: main.c
west-manifest/: west.yml
